--- a/template.tex
+++ b/template.tex
@@ -1,4 +1,7 @@
 \documentclass[12pt, letterpaper]{article} 
+
+\usepackage{amsmath, amssymb, amsthm}
+
 \title{Lecture}
 \author{Dani Nguyen}
 \date{\today}
@@ -6,6 +9,7 @@
 \begin{document}
 \maketitle
 
+\section{ }
 Hello world!
 
 \end{document}
