add file via upload

--- a/Lecture 1.tex
+++ b/Lecture 1.tex
@@ -39,7 +39,20 @@ true or all false.
     \item (Nul A)$^\bot$ = $\mathbb{R}^n$
     \item Row A = $\mathbb{R}^n$
 \end{enumerate}
-\subsection{Proof}
+
+\subsection*{Exercise}
+\textbf{Thm 9.1.16} Let A $\in M_n$ and let $\lambda \in \mathbb{C}$. Then the following statements are equivalent:
+\begin{enumerate}
+    \item $\lambda$ is an eigenvalue of A.
+    \item A\textbf{x} = $\lambda$\textbf{x} for some nonzero \textbf{x} $\in \mathbb{C}^n$.
+    \item (A - $\lambda$I)\textbf{x} = \textbf{0} has a nontrivial solution, that is, nullity(A-$\lambda$I) $>$ 0.
+    \item rank(A - $\lambda$I) $<$ n.
+    \item A - $\lambda$I is not invertible.
+    \item A$^\top$ - $\lambda$I is not invertible.
+    \item $\lambda$ is an eigenvalue of A$^\top$.
+\end{enumerate}
+\textbf{Proof}
+
 
 
 \end{document}
