--- a/Lecture 1.tex
+++ b/Lecture 1.tex
@@ -8,6 +8,7 @@
 
 \begin{document}
 \maketitle
+\tableofcontents
 
 \section{Invertible Matrix Theorem}
 \subsection{Definition}
@@ -40,7 +41,7 @@ true or all false.
     \item Row A = $\mathbb{R}^n$
 \end{enumerate}
 
-\subsection*{Exercise}
+\subsection{Exercise}
 \textbf{Thm 9.1.16} Let A $\in M_n$ and let $\lambda \in \mathbb{C}$. Then the following statements are equivalent:
 \begin{enumerate}
     \item $\lambda$ is an eigenvalue of A.
