--- a/Lecture 1.tex
+++ b/Lecture 1.tex
@@ -1,6 +1,6 @@
 \documentclass[12pt, letterpaper]{article} 
 
-\usepackage{amsmath, amssymb, amsthm}
+\usepackage{amsmath, amssymb, amsthm, enumerate}
 
 \title{Lecture 1}
 \author{Dani Nguyen}
@@ -40,10 +40,9 @@ true or all false.
     \item (Nul A)$^\bot$ = $\mathbb{R}^n$
     \item Row A = $\mathbb{R}^n$
 \end{enumerate}
-
 \subsection{Exercise}
 \textbf{Thm 9.1.16} Let A $\in M_n$ and let $\lambda \in \mathbb{C}$. Then the following statements are equivalent:
-\begin{enumerate}
+\begin{enumerate}[(a)]
     \item $\lambda$ is an eigenvalue of A.
     \item A\textbf{x} = $\lambda$\textbf{x} for some nonzero \textbf{x} $\in \mathbb{C}^n$.
     \item (A - $\lambda$I)\textbf{x} = \textbf{0} has a nontrivial solution, that is, nullity(A-$\lambda$I) $>$ 0.
@@ -53,7 +52,13 @@ true or all false.
     \item $\lambda$ is an eigenvalue of A$^\top$.
 \end{enumerate}
 \textbf{Proof}
-
-
+\begin{enumerate}[(a)]
+    \item $\Leftrightarrow$ (b) is true by definition of eigenvalue.
+    \item $\Leftrightarrow$ (c)
+    \item $\Leftrightarrow$ (d)
+    \item $\Leftrightarrow$ (e)
+    \item $\Leftrightarrow$ (f)
+    \item $\Leftrightarrow$ (g)
+\end{enumerate}
 
 \end{document}
