--- a/Lecture 1.tex
+++ b/Lecture 1.tex
@@ -40,6 +40,7 @@ true or all false.
     \item (Nul A)$^\bot$ = $\mathbb{R}^n$
     \item Row A = $\mathbb{R}^n$
 \end{enumerate}
+
 \subsection{Exercise}
 \textbf{Thm 9.1.16} Let A $\in M_n$ and let $\lambda \in \mathbb{C}$. Then the following statements are equivalent:
 \begin{enumerate}[(a)]
@@ -53,7 +54,7 @@ true or all false.
 \end{enumerate}
 \textbf{Proof}
 \begin{enumerate}[(a)]
-    \item $\Leftrightarrow$ (b) is true by definition of eigenvalue.
+    \item $\Leftrightarrow$ (b)
     \item $\Leftrightarrow$ (c)
     \item $\Leftrightarrow$ (d)
     \item $\Leftrightarrow$ (e)
