--- a/Lecture 1.tex
+++ b/Lecture 1.tex
@@ -54,11 +54,19 @@ true or all false.
 \end{enumerate}
 \textbf{Proof}
 \begin{enumerate}[(a)]
-    \item $\Leftrightarrow$ (b)
+    \item $\Leftrightarrow$ (b) 
+    
+    By definition 9.1.1, if $A\mathbf{x}=\lambda\mathbf{x}$ and $\mathbf{x}\neq\mathbf{0}$ then $(\lambda,\mathbf{x})$
+    is an eigenpair of A, meaning $\lambda$ is an eigenvalue of A.
     \item $\Leftrightarrow$ (c)
+    
+
     \item $\Leftrightarrow$ (d)
-    \item $\Leftrightarrow$ (e)
+    \item $\Leftrightarrow$ (e) 
     \item $\Leftrightarrow$ (f)
+    
+    By IMT, if $A^\top$ is not invertible, then $A$ is not invertible. The same follows for 
+    $A - \lambda I$ and $A^\top - \lambda I$.
     \item $\Leftrightarrow$ (g)
 \end{enumerate}
 
