--- a/Lecture 1.tex
+++ b/Lecture 1.tex
@@ -72,7 +72,7 @@ true or all false.
     
     \item $\Leftrightarrow$ (g)
     
-    
+    Since (a) is equivalent to (e), the same is true for $A^\top$.
 \end{enumerate}
 
 \end{document}
